Try to get SVG to fill width of screen. Fix issue with decimal in font size. Add notes in readme about clipping masks, etc.

--- a/src/prototype.scss
+++ b/src/prototype.scss
@@ -1,16 +1,16 @@
 html, body {
   margin:0;
   padding:0;
-  overflow:hidden;
+  // overflow:hidden;
 }
 
 svg {
   @include user-select(none);
   -webkit-touch-callout: none;
-  position:fixed;
+  position: absolute;
   top:0;
   left:0;
-  height:100%;
+  // height:100%;
   width:100%;
 }
 
